[gd_scene load_steps=4 format=3 uid="uid://dwcyctqnxxuwh"]

[ext_resource type="Script" uid="uid://dfm0hytextmnk" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://c7wdt3d62kq5u" path="res://icon.svg" id="1_v0iea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]

[node name="Player" type="CharacterBody2D" groups=["pausable", "player"]]
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v0iea")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StaminaUI" type="CanvasLayer" parent="Camera2D"]

[node name="StaminaBar" type="ProgressBar" parent="Camera2D/StaminaUI"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.28
anchor_bottom = 0.12
step = 0.1
value = 100.0

[node name="StressUI" type="CanvasLayer" parent="Camera2D"]

[node name="StressBar" type="ProgressBar" parent="Camera2D/StressUI"]
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.05
anchor_right = 0.59
anchor_bottom = 0.12
step = 0.1

[node name="KnowledgeUI" type="CanvasLayer" parent="Camera2D"]

[node name="KnowledgeBar" type="ProgressBar" parent="Camera2D/KnowledgeUI"]
anchors_preset = -1
anchor_left = 0.67
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.12
step = 0.1
